changes for response to reviewers (in progress)

--- a/src/energy.tex
+++ b/src/energy.tex
@@ -224,7 +224,7 @@ The purpose of this paper is to provide a detailed global TE analysis of CAM. We
 \section{Method}
 \label{sec:methods}
 \subsection{Defining total energy (TE)}\label{sec:defE}
-In the following it is assumed that the model top and bottom are coordinate surfaces and that there is no flux of mass through the model top and bottom. In a dry atmosphere the TE equation integrated over the entire sphere is given by
+In the following it is assumed that the model top and bottom are coordinate surfaces and that there is no flux of mass through the model top and bottom. In a dry {\color{red}{hydrostatic}} atmosphere the TE equation integrated over the entire sphere is given by
 \begin{equation}
 \frac{d}{dt}\int_{z=z_s}^{z=z_{top}}\iint_{\mathcal{S}} E_v \rho^{(d)}\, dA\, dz=\int_{z=z_s}^{z=z_{top}}\iint_{\mathcal{S}} F_{net}\, \rho^{(d)} dA\, dz,
 \end{equation}
@@ -250,7 +250,7 @@ where $\rho^{(d)}$ is the mass of dry air per unit volume of moist air and $\rho
 \begin{equation}
 \mathcal{L}_{all}=\left\{ `d`,`wv`,`cl`,`ci`,`rn`,`sw`\right\},
 \end{equation}
-Define associated heat capacities at constant pressure $c_p^{(\ell)}$. How many and which condensates are thermodynamically active in the dynamical core is controlled with namelist {\tt{qsize\_condensate\_loading}}. If {\tt{qsize\_condensate\_loading=1}} only water vapor ('$wv$') is active, {\tt{qsize\_condensate\_loading=3}} `$wv$`,`$cl$`, and`$ci$` are active, and if {\tt{qsize\_condensate\_loading=5}} then `$wv$`,`$cl$`,`$ci$`,`$rn$`, and `$sw$` are included.
+Define associated heat capacities at constant pressure $c_p^{(\ell)}$. {\color{red}{We refer to condensates as being {\em{thermodynamically active}} if they are included in the thermodynamic equation and momentum equations. E.g. if the thermodynamic equation is formulated in terms of temperature the energy conversion term includes a generalized heat capacity which is a function of the condensates and their associated heat capacities \citep[see, e.g., section 2.3 in ][]{LetAl2018JAMES}. Similarly the weight of the condensates is included in the pressure field and pressure gradient force.}}  How many and which condensates are thermodynamically active in the dynamical core is controlled with namelist {\tt{qsize\_condensate\_loading}}. If {\tt{qsize\_condensate\_loading=1}} only water vapor ('$wv$') is active, {\tt{qsize\_condensate\_loading=3}} `$wv$`,`$cl$`, and`$ci$` are active, and if {\tt{qsize\_condensate\_loading=5}} then `$wv$`,`$cl$`,`$ci$`,`$rn$`, and `$sw$` are included.
 
 Using the $\eta^{(d)}$ vertical coordinate and dry mixing ratios the TE (per unit area) that the frictionless adiabatic equations of motion in the CAM-SE dynamical core conserves is
 \begin{equation}
@@ -270,7 +270,7 @@ We note that earlier versions of CAM using the spectral transform dynamical core
 In a weather/climate model TE conservation errors can appear in many places throughout the algorithm. Below is a general list of where conservation errors can appear with specific examples from CAM:
 \begin{enumerate}
 \item {\em{Parameterization errors}}: Individual parameterizations may not have a closed energy budget. CAM parameterizations are required to have a closed energy budget under the assumption that pressure remains constant during the computation of the subgrid-scale parameterization tendencies. In other words, the TE change in the column is exactly balanced by the net sources/sinks given by the fluxes through the column. 
-\item {\em{Pressure work}}: That said, if parameterizations update specific humidity then the surface pressure changes (e.g., moisture entering or leaving the column). In that case the pressure changes which, in turn, changes TE. This is referred to as {\em{pressure work}} \citep[section 3.1.8 in ][]{CAM5}.
+\item {\em{Pressure work {\color{red}{error}}}}: That said, if parameterizations update specific humidity then the surface pressure changes (e.g., moisture entering or leaving the column). In that case the pressure changes which, in turn, changes TE. This is referred to as {\em{pressure work {\color{red}{error}}}} \citep[section 3.1.8 in ][]{CAM5}.
 \item {\em{Continuous TE formula discrepancy}}:  If the continuous equations of motion for the dynamical core conserve a TE different from the one used in the parameterizations then an energy inconsistency is present in the system as a whole. This is the case with the new version of CAM-SE that conserves a TE that is more accurate and comprehensive than that used in the CAM physics package as discussed above. As also noted above, this mismatch arose from the evolutionary nature of the model development and not by deliberate design; and should be eliminated in the future.
 \item {\em{Dynamical core errors}}: Energy conservation errors in the dynamical core, not related to physics-dynamics coupling errors, can arise in multiple parts of the algorithms used to solve the equations of motion. For dynamical cores employing filtering \citep[e.g., limiters in flux operators ][]{L2004MWR} and/or possessing inherent damping which controls small scales, it is hard to isolate their energy dissipation from other errors in the discretization. If a hyperviscosity term or some other diffusion is added to the momentum equation, then one can diagnose the local energy dissipation from such damping and add a corresponding heating to balance it (frictional heating). There may also be energy loss from viscosity applied to other variables such a temperature or pressure which is harder to compensate. Here is a beak-down relevant to CAM-SE using a floating Lagrangian vertical coordinate:
 \begin{itemize}
@@ -285,7 +285,7 @@ In a weather/climate model TE conservation errors can appear in many places thro
 \item {\em{Change of vertical grid/coordinate errors}}: If the vertical coordinates in physics and in the dynamical core are different then there can be spurious PDC energy errors even when using the state-update method for adding tendencies to the dynamical core state. For example, many non-hydrostatic dynamical cores \citep[e.g.][]{MPASatm} use a terrain-following height coordinate whereas physics uses pressure.
 \item {\em{Change of horizontal grid errors:}} If the physics tendencies are computed on a different horizontal grid than the dynamical core then there can be spurious energy errors from mapping tendencies and/or variables between horizontal grids \citep[e.g., ][]{HetAl2018MWR}. 
 \end{itemize}
-\item {\em{Compensating Energy fixers:}} To avoid TE conservation errors which could accumulate and ultimately lead to a climate drift, it is customary to apply an arbitrary energy fixer to restore TE conservation. Since the spatial distribution of many energy errors, in general, is not known, global fixers are used. In CAM a uniform increment is added to the temperature field to compensate for TE imbalance from all processes, i.e. dynamical core, physics-dynamics coupling, TE formula discrepancy, energy change due to pressure work, and possibly parameterization errors if present. 
+\item {\em{Compensating Energy fixers:}} To avoid TE conservation errors which could accumulate and ultimately lead to a climate drift, it is customary to apply an arbitrary energy fixer to restore TE conservation. Since the spatial distribution of many energy errors, in general, is not known, global fixers are used. In CAM a uniform increment is added to the temperature field to compensate for TE imbalance from all processes, i.e. dynamical core, physics-dynamics coupling, TE formula discrepancy, energy change due to pressure work {\color{red}{error}}, and possibly parameterization errors if present. 
 \end{enumerate}
 
 \subsection{Diagnostics}\label{sec:diagnostics}
@@ -293,7 +293,7 @@ The discrete global averages $\gi{(\cdot)}$ are computed consistent with the dis
 \begin{equation}
 \partial \gi{E}\equiv \frac{d\gi{E}}{dt}.
 \end{equation}
-By computing the global TE averages $\gi{E}$ at appropriate places in the model algorithms, we can directly compute $\partial \gi{E}$ due to various processes (such as viscosity, vertical remapping, physics-dynamics coupling, pressure work, etc.) by differencing $\gi{E}$ from after and before the algorithm takes place. This has been implemented using CAM history infrastructure by computing column integrals of energy at various places in CAM and outputting the 2D energy fields. CAM history internally handles accumulation and averaging in time at each horizontal grid point. The global averages are computed externally from the grid point vertical integrals on the history files (stored in double precision). The places in CAM where we compute/capture the grid point vertical integral $E$ are named using three letters where the first letter refers to whether the vertical integral is performed in physics (`p') or in the dynamical core (`d'). The trailing two letters refer to the specific location in dynamics or physics. For example, 'BP' refers to `Before Physics' and `AP' to `After Physics'; the associated total energies are denoted ${E}_{pBP}$ and ${E}_{pAP}$, respectively. The TE tendency from the parameterizations is the difference between ${E}_{pBP}$ and ${E}_{pAP}$ divided by the time-step. The terms and tendencies are then averaged globally externally to the model. The pseudo-code in Figure \ref{fig:dAD} defines the acronyms in terms of where in the CAM-SE algorithm the TE vertical integrals are computed and output. For details on the CAM-SE algorithm please see \citet{LetAl2018JAMES}.
+By computing the global TE averages $\gi{E}$ at appropriate places in the model algorithms, we can directly compute $\partial \gi{E}$ due to various processes (such as viscosity, vertical remapping, physics-dynamics coupling, pressure work {\color{red}{error}}, etc.) by differencing $\gi{E}$ from after and before the algorithm takes place. This has been implemented using CAM history infrastructure by computing column integrals of energy at various places in CAM and outputting the 2D energy fields. CAM history internally handles accumulation and averaging in time at each horizontal grid point. The global averages are computed externally from the grid point vertical integrals on the history files (stored in double precision). The places in CAM where we compute/capture the grid point vertical integral $E$ are named using three letters where the first letter refers to whether the vertical integral is performed in physics (`p') or in the dynamical core (`d'). The trailing two letters refer to the specific location in dynamics or physics. For example, 'BP' refers to `Before Physics' and `AP' to `After Physics'; the associated total energies are denoted ${E}_{pBP}$ and ${E}_{pAP}$, respectively. The TE tendency from the parameterizations is the difference between ${E}_{pBP}$ and ${E}_{pAP}$ divided by the time-step. The terms and tendencies are then averaged globally externally to the model. The pseudo-code in Figure \ref{fig:dAD} defines the acronyms in terms of where in the CAM-SE algorithm the TE vertical integrals are computed and output. For details on the CAM-SE algorithm please see \citet{LetAl2018JAMES}.
 
 Before defining the individual terms in detail we briefly review the model time stepping sequence starting with the physics component as illustrated in Figure \ref{fig:dAD}. The energy fixer is applied first to compensate for the spurious net energy change from all components introduced during the previous time step. We will describe this in more detail after the various sources and sinks are elucidated. The parameterizations are applied next and are required to be energy conserving. They update the state and accumulate the total physics tendency (forcing). At this stage the state is saved for use in the energy fixer in the next time step. Any changes in the global average energy after this are spurious and are compensated by the fixer. The parameterizations update the water vapor but not the moist pressure, implying a non-physical change in the dry mass of the atmosphere. The dry mass correction corrects the dry mass back to its proper value.
 
@@ -322,11 +322,11 @@ We now define the following energy tendencies corresponding to the itemized list
 \end{equation}
 where $\Delta t_{phys}$ is the physics time-step (default 1800s) and the subscript $phys$ on $\partial \gi{E}$ refers to the energy tendency computed in CAM physics. 
 %
-\item $\partial \gi{E}^{({pwork})}$: Total spurious energy tendency due to pressure work
+\item $\partial \gi{E}^{({pwork})}$: Total spurious energy tendency due to pressure work {\color{red}{error}}
 \begin{equation}
 \partial \gi{E}_{phys}^{({pwork})}=\frac{\gi{E}_{pAM}-\gi{E}_{pAP}}{\Delta t_{phys}}.
 \end{equation}
-Since CAM-SE dynamical core is based on a dry-mass vertical coordinate the pressure work takes place implicitly in the dynamical core. But the TE tendency due to pressure work is conveniently computed in physics since dynamical cores based on a moist vertical coordinate (e.g., CAM-FV) require pressure and moist mixing ratios to be adjusted for dry mass conservation and tracer mass conservation \citep[section 3.1.8 in ][]{CAM5}. The difference of TE after and before this adjustment is the TE tendency due to pressure work. In a dry mass vertical coordinate based on dry mixing ratios neither dry mass layer thickness nor dry mixing ratios need to be adjusted to take into account moisture changes in the column. For labeling purposes, the 'total forcing' associated with physics (at least in CAM) consists of parameterizations, pressure work and TE fixer, although strictly speaking the fixer includes components from the dynamics as will be seen.
+Since CAM-SE dynamical core is based on a dry-mass vertical coordinate the pressure work {\color{red}{error}} takes place implicitly in the dynamical core. But the TE tendency due to pressure work {\color{red}{error}} is conveniently computed in physics since dynamical cores based on a moist vertical coordinate (e.g., CAM-FV) require pressure and moist mixing ratios to be adjusted for dry mass conservation and tracer mass conservation \citep[section 3.1.8 in ][]{CAM5}. The difference of TE after and before this adjustment is the TE tendency due to pressure work {\color{red}{error}}. In a dry mass vertical coordinate based on dry mixing ratios neither dry mass layer thickness nor dry mixing ratios need to be adjusted to take into account moisture changes in the column. For labeling purposes, the 'total forcing' associated with physics (at least in CAM) consists of parameterizations, pressure work {\color{red}{error}} and TE fixer, although strictly speaking the fixer includes components from the dynamics as will be seen.
 \begin{equation}
 \partial \gi{E}_{phys}^{({phys})}\equiv \partial \gi{E}_{phys}^{({param})}+\partial \gi{E}_{phys}^{({pwork})}+\partial \gi{E}_{phys}^{({efix})}=\frac{\gi{E}_{pAM}-\gi{E}_{pBF}}{\Delta t_{phys}}.
 \end{equation}
@@ -398,7 +398,7 @@ In CAM-SE there are 3 physics-dynamics coupling algorithms described in detail i
 \end{enumerate}
 
 \subsection{A few observations regarding the energy budget terms}
-It is useful to note that the energy fixer `fixes' energy errors for the dynamical core, pressure work, physics-dynamics coupling and TE discrepancy
+It is useful to note that the energy fixer `fixes' energy errors for the dynamical core, pressure work {\color{red}{error}}, physics-dynamics coupling and TE discrepancy
 \begin{equation}
 \label{eq:budget_efix}
 -\partial \gi{E}_{phys}^{({efix})}=\partial \gi{E}_{phys}^{({pwork})}+\partial \gi{E}_{dyn}^{({adiab})}+\partial \gi{E}^{({pdc})}+\partial \gi{E}^{({discr})}.
@@ -489,7 +489,7 @@ Various configurations are used and referred to in terms of the $COMPSET$ (Compo
 This configuration is the most energetically consistent in that the physical parameterizations and the continuous equations of motion on which the dynamical core is based, conserve the same TE (defined in equation \eqref{eq:Ephys}); and there are no spurious sources/sinks in physics-dynamics coupling. Energetic consistency in dynamics and physics is obtained by setting $c_p^{(\ell)}\equiv c_p^{d}$ and $\mathcal{L}_{all}=\left\{ `d`,`wv`\right\}$ in the dynamical core equations of motion and TE computations. Associated namelist changes resulting in this configuration are $\tt{lcp\_moist=.false.}$, $\tt{se\_qsize\_condensate\_loading=1}$, and $\tt{ftype=1}$. 
 %If the parameterizations effectively update the model state then there are no physics-dynamics coupling errors \citep[$\tt{ftype=1}$ setup described in detail in ][]{LetAl2018JAMES}. 
 
-The TE consistent configuration in AMIP-type simulation ({\em{F2000climo}}) is used to compute baseline TE tendencies which will be used to compare with other model configurations. First we establish how long an average is needed to get robust TE tendency estimates. Figure \ref{fig:dEdt(t)} shows $\partial \gi{E}$ for various aspects of CAM-SE as a function of time. The simulation length is 5 years and monthly average values are used for the analysis. First consider the left plot. The TE tendency from parameterizations ($\partial \gi{E}^{(param)}_{phys}$) show significant variability with an amplitude of approximately 2.5$W/m^2$. As noted above this term does not figure in the spurious TE budget. The net source/sink provides an equal and opposite term to balance it. That said, the variability is reflected onto the TE tendency due to pressure work $\partial \gi{E}^{(pwork)}_{phys}\approx 0.32\pm 0.08 W/m^2$. On the scale used in the left-hand plot the TE tendency of the adiabatic dynamical core $\partial \gi{E}^{(adiab)}_{dyn}$ does not seem to be affected by $\partial \gi{E}^{(param)}_{phys}$ or $\partial \gi{E}^{(pwork)}_{phys}$ in terms of variability, and remains stable at approximately -0.6$W/m^2\pm ~0.02 W/m^2$. The TE fixer, in this model configuration, fixes $\partial \gi{E}^{(adiab)}_{dyn}$ and $\partial \gi{E}^{(pwork)}_{phys}$. Since the TE imbalance in the adiabatic dynamics remains approximately constant and the TE tendency associated with pressure work has variability, the TE tendency from the $\partial \gi{E}^{(efix)}_{phys}$ has variability; $\partial \gi{E}^{(efix)}_{phys}\approx 0.30 \pm 0.08 W/m^2$. As a consistency check $-\partial \gi{E}^{(adiab)}_{dyn}-\partial \gi{E}^{(pwork)}_{phys}$ is plotted with asterisk's and they coincide (as expected) with $\partial \gi{E}^{(efix)}_{phys}$ fulfilling \eqref{eq:budget_efix}.
+The TE consistent configuration in AMIP-type simulation ({\em{F2000climo}}) is used to compute baseline TE tendencies which will be used to compare with other model configurations. First we establish how long an average is needed to get robust TE tendency estimates. Figure \ref{fig:dEdt(t)} shows $\partial \gi{E}$ for various aspects of CAM-SE as a function of time. The simulation length is 5 years and monthly average values are used for the analysis. First consider the left plot. The TE tendency from parameterizations ($\partial \gi{E}^{(param)}_{phys}$) show significant variability with an amplitude of approximately 2.5$W/m^2$. As noted above this term does not figure in the spurious TE budget. The net source/sink provides an equal and opposite term to balance it. That said, the variability is reflected onto the TE tendency due to pressure work {\color{red}{error}} $\partial \gi{E}^{(pwork)}_{phys}\approx 0.32\pm 0.08 W/m^2$. On the scale used in the left-hand plot the TE tendency of the adiabatic dynamical core $\partial \gi{E}^{(adiab)}_{dyn}$ does not seem to be affected by $\partial \gi{E}^{(param)}_{phys}$ or $\partial \gi{E}^{(pwork)}_{phys}$ in terms of variability, and remains stable at approximately -0.6$W/m^2\pm ~0.02 W/m^2$. The TE fixer, in this model configuration, fixes $\partial \gi{E}^{(adiab)}_{dyn}$ and $\partial \gi{E}^{(pwork)}_{phys}$. Since the TE imbalance in the adiabatic dynamics remains approximately constant and the TE tendency associated with pressure work {\color{red}{error}} has variability, the TE tendency from the $\partial \gi{E}^{(efix)}_{phys}$ has variability; $\partial \gi{E}^{(efix)}_{phys}\approx 0.30 \pm 0.08 W/m^2$. As a consistency check $-\partial \gi{E}^{(adiab)}_{dyn}-\partial \gi{E}^{(pwork)}_{phys}$ is plotted with asterisk's and they coincide (as expected) with $\partial \gi{E}^{(efix)}_{phys}$ fulfilling \eqref{eq:budget_efix}.
 
 The right-hand plot in  Figure \ref{fig:dEdt(t)} shows a breakdown of the dynamical core TE tendencies. The majority of the TE errors are due to hyperviscosity on temperature and pressure, $\partial \gi{E}^{(hvis)}_{dyn}\approx -0.61\pm 0.01 W/m^2$. The diffusion of momentum is added back as frictional heating and is therefore not part of $\partial \gi{E}^{(hvis)}_{dyn}$. The frictional heating is a significant term in the TE tendency budget $\partial \gi{E}^{(fheat)}_{dyn}\approx 0.56\pm 0.02 W/m^2$ and exhibits some variability but with a rather small amplitude. The remaining TE error in the floating Lagrangian dynamics is inviscid dissipation and time-truncation errors $\partial \gi{E}_{dyn}^{(res)}=\partial \gi{E}_{dyn}^{({2D})}-\partial \gi{E}_{dyn}^{({hvis})}\approx 0.007 W/m^2$. The TE tendency from vertical remapping is approximately $\partial \gi{E}_{dyn}^{({remap})}\approx -0.01 W/m^2$. To within $\sim 0.02 W/m^2$ the dynamical core TE tendency terms can be computed from just one month average TE integrals. The TE tendencies computed in physics, excluding $\partial \gi{E}^{(param)}_{phys}$, exhibit more variability and are only accurate to $\sim 0.1 W/m^2$ after a one month average.
 
@@ -511,7 +511,7 @@ CAM-SE uses a floating Lagrangian vertical coordinate \citep{S1945JAS,L2004MWR} 
 \subsection{{\em{smooth topo}}: Smoother topography}\label{sec:topo}
 Topography for CAM is generated using a new version of the software/algorithm described in \cite{LetAl2015GMD} that is available at \url{https://github.com/NCAR/Topo}. The updates to the software includes smoothing algorithms and the computation of sub-grid-scale orientation of topography. 
 
-The default topography in CAM-SE uses the same amount of topography smoothing as CAM-FV (distance weighted smoother applied to the raw topography on $\sim 3$km cubed-sphere grid with a smoothing radius of 180km referred to as $C60$). When the topography is smoother (in this case using $C92$ smoothing, i.e. smoothing radius of approximately 276km) the hyperviscosity operators are less active leading to reduced TE errors, i.e. $\partial \gi{E}^{(hvis)}_{dyn}$ is reduced in half from approximately $-0.6W/m^2$ to $-0.3W/m^2$. The vertical remapping TE error, however, remains approximately the same. Since the pressure work is approximately $0.3W/m^2$ it almost exactly compensates for the TE tendency from the dynamical core $\partial \gi{E}^{(adiab)}_{dyn}$. Hence if one would only diagnose the TE tendency from the energy fixer one could mistakenly conclude that the model universally  conserves TE when, in fact, there are compensating TE errors in the system. These compensating errors  can only be diagnosed through a careful breakdown of the total TE tendencies.
+The default topography in CAM-SE uses the same amount of topography smoothing as CAM-FV (distance weighted smoother applied to the raw topography on $\sim 3$km cubed-sphere grid with a smoothing radius of 180km referred to as $C60$). When the topography is smoother (in this case using $C92$ smoothing, i.e. smoothing radius of approximately 276km) the hyperviscosity operators are less active leading to reduced TE errors, i.e. $\partial \gi{E}^{(hvis)}_{dyn}$ is reduced in half from approximately $-0.6W/m^2$ to $-0.3W/m^2$. The vertical remapping TE error, however, remains approximately the same. Since the pressure work {\color{red}{error}} is approximately $0.3W/m^2$ it almost exactly compensates for the TE tendency from the dynamical core $\partial \gi{E}^{(adiab)}_{dyn}$. Hence if one would only diagnose the TE tendency from the energy fixer one could mistakenly conclude that the model universally  conserves TE when, in fact, there are compensating TE errors in the system. These compensating errors  can only be diagnosed through a careful breakdown of the total TE tendencies.
 \subsection{{\em{default}}: TE formula discrepancy errors}\label{sec:ediscr}
 To assess the TE errors due to the discrepancy in the energy formula used by dynamics and physics, a simulation using {\em{state-updating}} ({\tt{ftype=1}}, no {\em{`dribbling}} errors) and thermodynamically active condensates in the dynamical core ($qsize\_condensate\_loading=5$) and consistent/accurate associated heat capacities $c_p^{(\ell)}$ (namelist {\tt{lcp\_moist=.true.}}) has been performed. In this setup the continuous equations of motion in the dynamical core conserve an energy different from physics, and the energy fixer will restore the `physics' version of energy. Despite the dynamical core now using a more comprehensive formula for energy, the TE dissipation terms in the dynamical core are roughly the same as in the energy consistent versions of the model. Using \eqref{eq:discre} we can assess the TE energy discrepancy errors which result in $\sim 0.59W/m^2$. \citet{T2011LNCSEb} found a similar result just from using the more comprehensive formula for heat capacity (based on dry air and water vapor) and not including thermodynamically active condensates. As noted before this formulation inconsistency is due to the evolutionary nature of CAM development and it is the intention to remove this inconsistency in future versions of the model.
 
@@ -529,11 +529,11 @@ using \eqref{eq:budget_efix}. With {\em{state-updating}} ({\tt{ftype=1}}) (i.e. 
 %{\color{red}{Note sure if we should add this section: `HOMME' configuration (no reference level subtraction in pressure level thickness damping and increased divergence damping) - in this configuration $\partial \gi{E}^{(adiab)}_{dyn}$ is 0.1$W/m^2$ - dycore is source of TE energy!!!! Solutions are very very noisy over orography so that could be a spurious source of TE i.e. not a `realistic' configuration. If we will use this configuration we should use smoother topography ...}}
 
 \subsection{{\em{QPC6}}: Simplified surface}\label{sec:QPC6}
-By running the model in aqua-planet configuration one can assess the effect of simplifying the surface boundary condition. In particular, without topography forcing the dynamical core is not challenged with respect to stationary near-grid-scale forcing. The TE tendency with respect to pressure work remains the same $\partial \gi{E}_{phys}^{({pwork})}$ as the AMIP-type simulations, however, the adiabatic dynamical core TE tendency reduces to $\partial \gi{E}_{dyn}^{({adiab})}=-0.14 W/m^2$ (approximately a factor 4 reduction). Most of that reduction is due to viscosity $\partial \gi{E}_{dyn}^{(hvis)}=-0.13 W/m^2$. The frictional heating is roughly the same as AMIP $\partial \gi{E}_{dyn}^{(fheat)}=0.48 W/m^2$ as is the vertical remapping  $\partial \gi{E}_{dyn}^{(remap)}=-0.01 W/m^2$. To evaluate the dynamical cores diffusion of TE it is therefore important to asses the model in a configuration with topography as the wave dynamics generated by topography leads to more active diffusion operators.
+By running the model in aqua-planet configuration one can assess the effect of simplifying the surface boundary condition. In particular, without topography forcing the dynamical core is not challenged with respect to stationary near-grid-scale forcing. The TE tendency with respect to pressure work {\color{red}{error}} remains the same $\partial \gi{E}_{phys}^{({pwork})}$ as the AMIP-type simulations, however, the adiabatic dynamical core TE tendency reduces to $\partial \gi{E}_{dyn}^{({adiab})}=-0.14 W/m^2$ (approximately a factor 4 reduction). Most of that reduction is due to viscosity $\partial \gi{E}_{dyn}^{(hvis)}=-0.13 W/m^2$. The frictional heating is roughly the same as AMIP $\partial \gi{E}_{dyn}^{(fheat)}=0.48 W/m^2$ as is the vertical remapping  $\partial \gi{E}_{dyn}^{(remap)}=-0.01 W/m^2$. To evaluate the dynamical cores diffusion of TE it is therefore important to asses the model in a configuration with topography as the wave dynamics generated by topography leads to more active diffusion operators.
 \subsection{{\em{FHS94}}: Simplified physics (no moisture)}\label{sec:FHS94}
 Simplifying the setup even further by replacing the parameterizations with relaxation towards a zonally symmetric temperature profile and simple boundary layer friction (Held-Suarez forcing) as well as excluding moisture, the TE errors in the dynamical core decreases even further to $\sim 0.002W/m^2$ since there is no small scale forcing. Small scales are only created by the nonlinear dynamics and the physics works to damp them. Hyperviscosity is less active leading to significant reductions compared to aqua-planet and `real-world' simulation results. The TE diffusion in vertical remapping reduces by an order of magnitude compared to the aqua-planet simulations ($\sim 0.0005W/m^2$). This further emphasizes that TE diffusion assessment in a simplified setup is not necessarily telling for the dynamical cores performance with moist physics and topography that challenge the dynamical core in terms of strong grid-scale forcing.
 \subsection{{\em{FV}}: Changing dynamical core to Finite-Volume (FV)}\label{sec:cam-fv}
-As a comparison the TE error characteristics of the CAM-FV dynamical core are assessed. Although the TE diagnostics have not been implemented in the CAM-FV dynamical core, the TE diagnostics in CAM physics are independent of dynamical core and can therefore be activated with CAM-FV. The CAM-FV dynamical core uses {\em{state-update}} physics-dynamics coupling ({\tt{ftype=1}}) ($\partial \gi{E}^{(pdc)}=0$) and the same TE definition as CAM physics ($\partial \gi{E}^{(discr)}=0$). Hence \eqref{eq:pdc2} can be used to compute the TE errors of the CAM-FV dynamical core, $\partial \gi{E}^{(adiab)}_{dyn}\approx -1 W/m^2$. As we do not have the break-down of $\partial \gi{E}^{(adiab)}_{dyn}$ it can not be determined how much of the TE errors are due to the vertical remapping. Furthermore, CAM-FV contains intrinsic dissipation operators (limiters in the flux operators) making it difficult to assess TE sources/sinks due to dissipation. Note that the pressure work even with a change of dynamical core remains approximately the same as the CAM-SE configurations.
+As a comparison the TE error characteristics of the CAM-FV dynamical core are assessed. Although the TE diagnostics have not been implemented in the CAM-FV dynamical core, the TE diagnostics in CAM physics are independent of dynamical core and can therefore be activated with CAM-FV. The CAM-FV dynamical core uses {\em{state-update}} physics-dynamics coupling ({\tt{ftype=1}}) ($\partial \gi{E}^{(pdc)}=0$) and the same TE definition as CAM physics ($\partial \gi{E}^{(discr)}=0$). Hence \eqref{eq:pdc2} can be used to compute the TE errors of the CAM-FV dynamical core, $\partial \gi{E}^{(adiab)}_{dyn}\approx -1 W/m^2$. As we do not have the break-down of $\partial \gi{E}^{(adiab)}_{dyn}$ it can not be determined how much of the TE errors are due to the vertical remapping. Furthermore, CAM-FV contains intrinsic dissipation operators (limiters in the flux operators) making it difficult to assess TE sources/sinks due to dissipation. Note that the pressure work {\color{red}{error}} even with a change of dynamical core remains approximately the same as the CAM-SE configurations.
 \subsection{{\em{CSLAM}}: Quasi equal-area physics grid}\label{sec:cslam}
 This configuration was discussed in the context of element noise in section \ref{sec:noise}. By averaging the dynamics state of an equal-partitioning (in central angle cubed-sphere coordinates) of the elements, the element-boundary noise found in CAM-SE can be removed. \cite{LetAl2018JAMES} argue that this way of computing the state for the physics is more consistent with physics in terms of providing a cell-averaged state instead of irregularly spaced point (quadrature) values. In order to achieve a closed mass-budget, this configuration uses CSLAM for tracer transport rather than SE transport. That said, the physics columns no longer coincide with the quadrature grid and there are TE errors associated with mapping state and tendencies between the two grids.
 
@@ -576,7 +576,7 @@ Due to similar noise problems with CAM-SE-CSLAM when using {\tt{ftype=1}} that w
 \section{Conclusions}\label{sec:concl}
 A detailed total energy (TE) error analysis of the Community Atmosphere Model (CAM) using version 6 physics (included in the CESM2.1 release) running at approximately $1^\circ$ horizontal resolution has been presented. In the global climate model there can be many spurious contributions to the TE budget. These errors can be divided into four categories: physical parameterizations, adiabatic dynamical core, the coupling between physics and dynamics, and TE definition discrepancies between dynamics and physics. The latter is not by design but through the evolutionary nature of model development. By capturing the atmospheric state at various locations in the model algorithm, a detailed budget of TE errors can be constructed. The net spurious TE energy errors are compensated with a global energy fixer (providing a global uniform temperature increment) every physics time-step.
 
-In CAM physics the parameterizations have, by design, a closed energy budget (change in TE is balanced by fluxes in/out the top and bottom of physics columns) if it is assumed that pressure is not modified. However, the pressure changes due to fluxes of mass (e.g., water vapor) in/out of the column which changes energy (referred to as pressure work). The pressure work with the full moist physics configuration is very stable across different configurations at $\sim 0.3W/m^2$. The TE errors in the spectral element (SE) dynamical core varies across configurations. Aspects that influence TE is the presence of topography, the amount of topography smoothing and moist physics. By smoothing topography more the TE error is cut in half from $\sim -0.6W/m^2$ to $\sim -0.3W/m^2$; and reduces by a factor of five ($\sim-0.1W/m^2$) if no topography is present at all (aqua-planet configuration). Moist physics forcing also contributes significantly to the TE budget. For example, in the dry Held-Suarez setup TE dissipation of the SE dynamical core reduces to $-0.03W/m^2$. Topography and moist physics force the dynamical core at the grid scale and hence the viscosity operators are more active. Consistent with this statement is that the changes in TE discussed so far are almost entirely due to the viscosity operator TE dissipation. For CAM-SE the spurious TE dissipation in the adiabatic dynamical core is $\sim-0.6W/m^2$ in `real-world' configurations. For comparison, CAM-FV's spurious TE change due to the adiabatic dynamical core is $\sim-1W/m^2$. 
+In CAM physics the parameterizations have, by design, a closed energy budget (change in TE is balanced by fluxes in/out the top and bottom of physics columns) if it is assumed that pressure is not modified. However, the pressure changes due to fluxes of mass (e.g., water vapor) in/out of the column which changes energy (referred to as pressure work {\color{red}{error}}). The pressure work {\color{red}{error}} with the full moist physics configuration is very stable across different configurations at $\sim 0.3W/m^2$. The TE errors in the spectral element (SE) dynamical core varies across configurations. Aspects that influence TE is the presence of topography, the amount of topography smoothing and moist physics. By smoothing topography more the TE error is cut in half from $\sim -0.6W/m^2$ to $\sim -0.3W/m^2$; and reduces by a factor of {\color{red}{six}} ($\sim-0.1W/m^2$) if no topography is present at all (aqua-planet configuration). Moist physics forcing also contributes significantly to the TE budget. For example, in the dry Held-Suarez setup TE dissipation of the SE dynamical core reduces to $-0.03W/m^2$. Topography and moist physics force the dynamical core at the grid scale and hence the viscosity operators are more active. Consistent with this statement is that the changes in TE discussed so far are almost entirely due to the viscosity operator TE dissipation. For CAM-SE the spurious TE dissipation in the adiabatic dynamical core is $\sim-0.6W/m^2$ in `real-world' configurations. For comparison, CAM-FV's spurious TE change due to the adiabatic dynamical core is $\sim-1W/m^2$. 
 
 By further breaking down the TE dissipation in the SE dynamical core it is observed the vertical remapping accounts for only $\sim-0.01W/m^2$. That said, if the shape-preserving limiters in the vertical remapping are invoked the TE dissipation increases 20-fold to $\sim-0.2W/m^2$. In CAM-SE the kinetic energy dissipation is added as heating in the thermodynamic equation (also referred to as frictional heating). The frictional heating remains very stable across configurations that include moisture ($\sim 0.5W/m^2$) and reduces drastically for dry atmosphere setups (factor 4 reduction to ($\sim 0.12W/m^2$)). Hence this term is an important term in the TE budget. The TE budget for the dynamical core is dominated by TE change due to hyperviscosity; TE errors due to time-truncation and frictionless equations of motion are negligible. Errors associated with physics-dynamics coupling (if applicable) are approximately $0.5W/m^2$. Due to the evolutionary nature of model development the SE dynamical core's continuous equation of motion conserve a more comprehensive TE compared to the physical parameterizations. This TE discrepancy leads to an approximately $0.5W/m^2$ total energy source. Running physics on a different grid than the dynamical introduces TE mapping errors such as in CAM-SE-CSLAM (Conservative Semi-Lagrangian Multi-tracer transport scheme). These errors are, however, rather small $-0.07W/m^2$.
 
